Move latex util in root dir

--- a/latex_util.ipynb
+++ b/latex_util.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -89,13 +89,13 @@
     }
    ],
    "source": [
-    "unbounded = pd.read_csv(\"unbounded_gs/unbounded.csv\")\n",
+    "unbounded = pd.read_csv(\"stat_models/experiments/stochastic-volatility/QML/rossi_params/small/unbounded_gs/unbounded.csv\")\n",
     "print_latex_rows(unbounded, \"\\\\theta_{unbounded}\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -109,13 +109,13 @@
     }
    ],
    "source": [
-    "bounded = pd.read_csv(\"bouned_gs/bounded.csv\")\n",
+    "bounded = pd.read_csv(\"stat_models/experiments/stochastic-volatility/QML/rossi_params/small/bouned_gs/bounded.csv\")\n",
     "print_latex_rows(bounded, \"\\\\theta_{bounded}\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -129,7 +129,7 @@
     }
    ],
    "source": [
-    "reference = pd.read_csv(\"reference_results.csv\", header=None)\n",
+    "reference = pd.read_csv(\"stat_models/experiments/stochastic-volatility/QML/rossi_params/small/reference_results.csv\", header=None)\n",
     "print_latex_rows(convert_reference_to_summary_format(reference), \"\\\\theta_{jacquier}\")"
    ]
   },
