Use latex util to create tables for qml/smm comparison

--- a/latex_util.ipynb
+++ b/latex_util.ipynb
@@ -18,10 +18,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
+    "\n",
     "def make_latex_score(mean, rmse):\n",
     "    rmse = \"{:.3f}\".format(rmse)\n",
     "    mean = \"{:.3f}\".format(mean)\n",
@@ -53,14 +54,15 @@
     "    for length, simulation in summary_df.groupby(\"length\"):\n",
     "        print(f\"T = {length}\")\n",
     "        print_latex_rows(\n",
-    "            simulation.sort_values(by=[\"true_params_3\"], ascending=False), label\n",
+    "            simulation.sort_values(by=\"true_params_3\",  ascending=False).iloc[[0, 1, 3, 2, 4, 5, 6, 7, 8], :],\n",
+    "            label\n",
     "        )\n",
     "        print()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -97,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -117,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -137,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -157,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -339,7 +341,7 @@
        "8          0.871790          0.139583  1.000594  0.141135  0.168421  "
       ]
      },
-     "execution_count": 7,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -357,7 +359,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -365,28 +367,28 @@
      "output_type": "stream",
      "text": [
       "T = 250\n",
-      "\\hat{\\theta}_{\\text{QML}} & \\underset{(0.570)}{-1.078} & \\underset{(0.069)}{0.868} & \\underset{(0.222)}{0.717} & \\underset{(0.536)}{-0.683} & \\underset{(0.065)}{0.917} & \\underset{(0.206)}{0.536} & \\underset{(0.669)}{-1.082} & \\underset{(0.090)}{0.853} & \\underset{(0.220)}{0.406} \\\\\n",
-      "\\hat{\\theta}_{\\text{QML}} & \\underset{(0.524)}{-0.453} & \\underset{(0.064)}{0.945} & \\underset{(0.179)}{0.367} & \\underset{(0.718)}{-0.794} & \\underset{(0.097)}{0.892} & \\underset{(0.213)}{0.330} & \\underset{(0.786)}{-0.648} & \\underset{(0.106)}{0.912} & \\underset{(0.208)}{0.252} \\\\\n",
+      "\\hat{\\theta}_{\\text{QML}} & \\underset{(0.570)}{-1.078} & \\underset{(0.069)}{0.868} & \\underset{(0.222)}{0.717} & \\underset{(0.536)}{-0.683} & \\underset{(0.065)}{0.917} & \\underset{(0.206)}{0.536} & \\underset{(0.524)}{-0.453} & \\underset{(0.064)}{0.945} & \\underset{(0.179)}{0.367} \\\\\n",
+      "\\hat{\\theta}_{\\text{QML}} & \\underset{(0.669)}{-1.082} & \\underset{(0.090)}{0.853} & \\underset{(0.220)}{0.406} & \\underset{(0.718)}{-0.794} & \\underset{(0.097)}{0.892} & \\underset{(0.213)}{0.330} & \\underset{(0.786)}{-0.648} & \\underset{(0.106)}{0.912} & \\underset{(0.208)}{0.252} \\\\\n",
       "\\hat{\\theta}_{\\text{QML}} & \\underset{(0.796)}{-1.318} & \\underset{(0.112)}{0.813} & \\underset{(0.204)}{0.179} & \\underset{(1.056)}{-1.254} & \\underset{(0.149)}{0.822} & \\underset{(0.208)}{0.173} & \\underset{(1.226)}{-1.221} & \\underset{(0.174)}{0.827} & \\underset{(0.212)}{0.159} \\\\\n",
       "\n",
       "T = 500\n",
-      "\\hat{\\theta}_{\\text{QML}} & \\underset{(0.404)}{-0.950} & \\underset{(0.049)}{0.884} & \\underset{(0.154)}{0.689} & \\underset{(0.326)}{-0.533} & \\underset{(0.039)}{0.935} & \\underset{(0.126)}{0.502} & \\underset{(0.547)}{-0.936} & \\underset{(0.073)}{0.873} & \\underset{(0.164)}{0.389} \\\\\n",
-      "\\hat{\\theta}_{\\text{QML}} & \\underset{(0.262)}{-0.283} & \\underset{(0.032)}{0.965} & \\underset{(0.095)}{0.330} & \\underset{(0.496)}{-0.587} & \\underset{(0.067)}{0.920} & \\underset{(0.146)}{0.300} & \\underset{(0.479)}{-0.373} & \\underset{(0.064)}{0.950} & \\underset{(0.127)}{0.212} \\\\\n",
+      "\\hat{\\theta}_{\\text{QML}} & \\underset{(0.404)}{-0.950} & \\underset{(0.049)}{0.884} & \\underset{(0.154)}{0.689} & \\underset{(0.326)}{-0.533} & \\underset{(0.039)}{0.935} & \\underset{(0.126)}{0.502} & \\underset{(0.262)}{-0.283} & \\underset{(0.032)}{0.965} & \\underset{(0.095)}{0.330} \\\\\n",
+      "\\hat{\\theta}_{\\text{QML}} & \\underset{(0.547)}{-0.936} & \\underset{(0.073)}{0.873} & \\underset{(0.164)}{0.389} & \\underset{(0.496)}{-0.587} & \\underset{(0.067)}{0.920} & \\underset{(0.146)}{0.300} & \\underset{(0.479)}{-0.373} & \\underset{(0.064)}{0.950} & \\underset{(0.127)}{0.212} \\\\\n",
       "\\hat{\\theta}_{\\text{QML}} & \\underset{(0.715)}{-1.163} & \\underset{(0.101)}{0.835} & \\underset{(0.161)}{0.160} & \\underset{(0.898)}{-1.022} & \\underset{(0.126)}{0.856} & \\underset{(0.165)}{0.154} & \\underset{(0.997)}{-0.903} & \\underset{(0.141)}{0.872} & \\underset{(0.169)}{0.140} \\\\\n",
       "\n",
       "T = 1000\n",
-      "\\hat{\\theta}_{\\text{QML}} & \\underset{(0.251)}{-0.870} & \\underset{(0.030)}{0.894} & \\underset{(0.105)}{0.681} & \\underset{(0.155)}{-0.455} & \\underset{(0.019)}{0.944} & \\underset{(0.076)}{0.491} & \\underset{(0.424)}{-0.853} & \\underset{(0.057)}{0.884} & \\underset{(0.125)}{0.382} \\\\\n",
-      "\\hat{\\theta}_{\\text{QML}} & \\underset{(0.099)}{-0.206} & \\underset{(0.012)}{0.975} & \\underset{(0.052)}{0.316} & \\underset{(0.268)}{-0.453} & \\underset{(0.036)}{0.938} & \\underset{(0.088)}{0.276} & \\underset{(0.134)}{-0.205} & \\underset{(0.018)}{0.972} & \\underset{(0.052)}{0.178} \\\\\n",
+      "\\hat{\\theta}_{\\text{QML}} & \\underset{(0.251)}{-0.870} & \\underset{(0.030)}{0.894} & \\underset{(0.105)}{0.681} & \\underset{(0.155)}{-0.455} & \\underset{(0.019)}{0.944} & \\underset{(0.076)}{0.491} & \\underset{(0.099)}{-0.206} & \\underset{(0.012)}{0.975} & \\underset{(0.052)}{0.316} \\\\\n",
+      "\\hat{\\theta}_{\\text{QML}} & \\underset{(0.424)}{-0.853} & \\underset{(0.057)}{0.884} & \\underset{(0.125)}{0.382} & \\underset{(0.268)}{-0.453} & \\underset{(0.036)}{0.938} & \\underset{(0.088)}{0.276} & \\underset{(0.134)}{-0.205} & \\underset{(0.018)}{0.972} & \\underset{(0.052)}{0.178} \\\\\n",
       "\\hat{\\theta}_{\\text{QML}} & \\underset{(0.666)}{-1.022} & \\underset{(0.094)}{0.855} & \\underset{(0.130)}{0.153} & \\underset{(0.752)}{-0.801} & \\underset{(0.106)}{0.887} & \\underset{(0.129)}{0.141} & \\underset{(0.793)}{-0.628} & \\underset{(0.112)}{0.911} & \\underset{(0.128)}{0.121} \\\\\n",
       "\n",
       "T = 2000\n",
-      "\\hat{\\theta}_{\\text{QML}} & \\underset{(0.170)}{-0.839} & \\underset{(0.020)}{0.898} & \\underset{(0.073)}{0.675} & \\underset{(0.101)}{-0.430} & \\underset{(0.012)}{0.948} & \\underset{(0.053)}{0.486} & \\underset{(0.282)}{-0.788} & \\underset{(0.038)}{0.893} & \\underset{(0.086)}{0.371} \\\\\n",
-      "\\hat{\\theta}_{\\text{QML}} & \\underset{(0.060)}{-0.183} & \\underset{(0.007)}{0.978} & \\underset{(0.037)}{0.312} & \\underset{(0.154)}{-0.404} & \\underset{(0.021)}{0.945} & \\underset{(0.056)}{0.267} & \\underset{(0.076)}{-0.172} & \\underset{(0.010)}{0.977} & \\underset{(0.034)}{0.171} \\\\\n",
+      "\\hat{\\theta}_{\\text{QML}} & \\underset{(0.170)}{-0.839} & \\underset{(0.020)}{0.898} & \\underset{(0.073)}{0.675} & \\underset{(0.101)}{-0.430} & \\underset{(0.012)}{0.948} & \\underset{(0.053)}{0.486} & \\underset{(0.060)}{-0.183} & \\underset{(0.007)}{0.978} & \\underset{(0.037)}{0.312} \\\\\n",
+      "\\hat{\\theta}_{\\text{QML}} & \\underset{(0.282)}{-0.788} & \\underset{(0.038)}{0.893} & \\underset{(0.086)}{0.371} & \\underset{(0.154)}{-0.404} & \\underset{(0.021)}{0.945} & \\underset{(0.056)}{0.267} & \\underset{(0.076)}{-0.172} & \\underset{(0.010)}{0.977} & \\underset{(0.034)}{0.171} \\\\\n",
       "\\hat{\\theta}_{\\text{QML}} & \\underset{(0.649)}{-0.978} & \\underset{(0.091)}{0.862} & \\underset{(0.111)}{0.155} & \\underset{(0.670)}{-0.699} & \\underset{(0.094)}{0.901} & \\underset{(0.105)}{0.135} & \\underset{(0.590)}{-0.420} & \\underset{(0.083)}{0.941} & \\underset{(0.093)}{0.098} \\\\\n",
       "\n",
       "T = 4000\n",
-      "\\hat{\\theta}_{\\text{QML}} & \\underset{(0.118)}{-0.831} & \\underset{(0.014)}{0.899} & \\underset{(0.051)}{0.675} & \\underset{(0.069)}{-0.419} & \\underset{(0.008)}{0.949} & \\underset{(0.037)}{0.484} & \\underset{(0.184)}{-0.759} & \\underset{(0.025)}{0.897} & \\underset{(0.058)}{0.366} \\\\\n",
-      "\\hat{\\theta}_{\\text{QML}} & \\underset{(0.038)}{-0.173} & \\underset{(0.005)}{0.979} & \\underset{(0.025)}{0.309} & \\underset{(0.095)}{-0.382} & \\underset{(0.013)}{0.948} & \\underset{(0.038)}{0.262} & \\underset{(0.044)}{-0.158} & \\underset{(0.006)}{0.979} & \\underset{(0.022)}{0.168} \\\\\n",
+      "\\hat{\\theta}_{\\text{QML}} & \\underset{(0.118)}{-0.831} & \\underset{(0.014)}{0.899} & \\underset{(0.051)}{0.675} & \\underset{(0.069)}{-0.419} & \\underset{(0.008)}{0.949} & \\underset{(0.037)}{0.484} & \\underset{(0.038)}{-0.173} & \\underset{(0.005)}{0.979} & \\underset{(0.025)}{0.309} \\\\\n",
+      "\\hat{\\theta}_{\\text{QML}} & \\underset{(0.184)}{-0.759} & \\underset{(0.025)}{0.897} & \\underset{(0.058)}{0.366} & \\underset{(0.095)}{-0.382} & \\underset{(0.013)}{0.948} & \\underset{(0.038)}{0.262} & \\underset{(0.044)}{-0.158} & \\underset{(0.006)}{0.979} & \\underset{(0.022)}{0.168} \\\\\n",
       "\\hat{\\theta}_{\\text{QML}} & \\underset{(0.603)}{-0.898} & \\underset{(0.085)}{0.873} & \\underset{(0.091)}{0.152} & \\underset{(0.503)}{-0.541} & \\underset{(0.071)}{0.923} & \\underset{(0.079)}{0.119} & \\underset{(0.326)}{-0.244} & \\underset{(0.046)}{0.965} & \\underset{(0.057)}{0.078} \\\\\n",
       "\n"
      ]
@@ -406,7 +408,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -414,28 +416,28 @@
      "output_type": "stream",
      "text": [
       "T = 250\n",
-      "\\hat{\\theta}_{\\text{SMM}} & \\underset{(0.604)}{-1.083} & \\underset{(0.074)}{0.866} & \\underset{(0.211)}{0.650} & \\underset{(0.538)}{-0.673} & \\underset{(0.066)}{0.917} & \\underset{(0.176)}{0.475} & \\underset{(0.577)}{-0.995} & \\underset{(0.079)}{0.864} & \\underset{(0.133)}{0.365} \\\\\n",
-      "\\hat{\\theta}_{\\text{SMM}} & \\underset{(0.508)}{-0.461} & \\underset{(0.062)}{0.943} & \\underset{(0.129)}{0.329} & \\underset{(0.590)}{-0.701} & \\underset{(0.081)}{0.904} & \\underset{(0.120)}{0.285} & \\underset{(0.638)}{-0.579} & \\underset{(0.087)}{0.921} & \\underset{(0.110)}{0.217} \\\\\n",
+      "\\hat{\\theta}_{\\text{SMM}} & \\underset{(0.604)}{-1.083} & \\underset{(0.074)}{0.866} & \\underset{(0.211)}{0.650} & \\underset{(0.538)}{-0.673} & \\underset{(0.066)}{0.917} & \\underset{(0.176)}{0.475} & \\underset{(0.508)}{-0.461} & \\underset{(0.062)}{0.943} & \\underset{(0.129)}{0.329} \\\\\n",
+      "\\hat{\\theta}_{\\text{SMM}} & \\underset{(0.577)}{-0.995} & \\underset{(0.079)}{0.864} & \\underset{(0.133)}{0.365} & \\underset{(0.590)}{-0.701} & \\underset{(0.081)}{0.904} & \\underset{(0.120)}{0.285} & \\underset{(0.638)}{-0.579} & \\underset{(0.087)}{0.921} & \\underset{(0.110)}{0.217} \\\\\n",
       "\\hat{\\theta}_{\\text{SMM}} & \\underset{(0.548)}{-1.105} & \\underset{(0.078)}{0.843} & \\underset{(0.084)}{0.148} & \\underset{(0.803)}{-1.051} & \\underset{(0.114)}{0.851} & \\underset{(0.091)}{0.139} & \\underset{(0.987)}{-1.041} & \\underset{(0.140)}{0.852} & \\underset{(0.101)}{0.127} \\\\\n",
       "\n",
       "T = 500\n",
-      "\\hat{\\theta}_{\\text{SMM}} & \\underset{(0.456)}{-0.989} & \\underset{(0.055)}{0.879} & \\underset{(0.169)}{0.659} & \\underset{(0.306)}{-0.528} & \\underset{(0.037)}{0.935} & \\underset{(0.133)}{0.463} & \\underset{(0.437)}{-0.913} & \\underset{(0.059)}{0.876} & \\underset{(0.099)}{0.369} \\\\\n",
-      "\\hat{\\theta}_{\\text{SMM}} & \\underset{(0.239)}{-0.288} & \\underset{(0.029)}{0.965} & \\underset{(0.096)}{0.308} & \\underset{(0.363)}{-0.544} & \\underset{(0.049)}{0.926} & \\underset{(0.085)}{0.275} & \\underset{(0.356)}{-0.368} & \\underset{(0.048)}{0.950} & \\underset{(0.076)}{0.205} \\\\\n",
+      "\\hat{\\theta}_{\\text{SMM}} & \\underset{(0.456)}{-0.989} & \\underset{(0.055)}{0.879} & \\underset{(0.169)}{0.659} & \\underset{(0.306)}{-0.528} & \\underset{(0.037)}{0.935} & \\underset{(0.133)}{0.463} & \\underset{(0.239)}{-0.288} & \\underset{(0.029)}{0.965} & \\underset{(0.096)}{0.308} \\\\\n",
+      "\\hat{\\theta}_{\\text{SMM}} & \\underset{(0.437)}{-0.913} & \\underset{(0.059)}{0.876} & \\underset{(0.099)}{0.369} & \\underset{(0.363)}{-0.544} & \\underset{(0.049)}{0.926} & \\underset{(0.085)}{0.275} & \\underset{(0.356)}{-0.368} & \\underset{(0.048)}{0.950} & \\underset{(0.076)}{0.205} \\\\\n",
       "\\hat{\\theta}_{\\text{SMM}} & \\underset{(0.495)}{-1.104} & \\underset{(0.070)}{0.844} & \\underset{(0.069)}{0.158} & \\underset{(0.740)}{-1.014} & \\underset{(0.104)}{0.857} & \\underset{(0.081)}{0.150} & \\underset{(0.903)}{-0.972} & \\underset{(0.127)}{0.863} & \\underset{(0.097)}{0.139} \\\\\n",
       "\n",
       "T = 1000\n",
-      "\\hat{\\theta}_{\\text{SMM}} & \\underset{(0.292)}{-0.889} & \\underset{(0.035)}{0.891} & \\underset{(0.135)}{0.654} & \\underset{(0.205)}{-0.461} & \\underset{(0.025)}{0.943} & \\underset{(0.108)}{0.462} & \\underset{(0.283)}{-0.824} & \\underset{(0.038)}{0.888} & \\underset{(0.072)}{0.367} \\\\\n",
-      "\\hat{\\theta}_{\\text{SMM}} & \\underset{(0.144)}{-0.224} & \\underset{(0.018)}{0.973} & \\underset{(0.080)}{0.301} & \\underset{(0.220)}{-0.460} & \\underset{(0.030)}{0.937} & \\underset{(0.061)}{0.272} & \\underset{(0.191)}{-0.269} & \\underset{(0.026)}{0.963} & \\underset{(0.056)}{0.199} \\\\\n",
+      "\\hat{\\theta}_{\\text{SMM}} & \\underset{(0.292)}{-0.889} & \\underset{(0.035)}{0.891} & \\underset{(0.135)}{0.654} & \\underset{(0.205)}{-0.461} & \\underset{(0.025)}{0.943} & \\underset{(0.108)}{0.462} & \\underset{(0.144)}{-0.224} & \\underset{(0.018)}{0.973} & \\underset{(0.080)}{0.301} \\\\\n",
+      "\\hat{\\theta}_{\\text{SMM}} & \\underset{(0.283)}{-0.824} & \\underset{(0.038)}{0.888} & \\underset{(0.072)}{0.367} & \\underset{(0.220)}{-0.460} & \\underset{(0.030)}{0.937} & \\underset{(0.061)}{0.272} & \\underset{(0.191)}{-0.269} & \\underset{(0.026)}{0.963} & \\underset{(0.056)}{0.199} \\\\\n",
       "\\hat{\\theta}_{\\text{SMM}} & \\underset{(0.432)}{-1.078} & \\underset{(0.061)}{0.847} & \\underset{(0.055)}{0.163} & \\underset{(0.652)}{-0.949} & \\underset{(0.092)}{0.866} & \\underset{(0.072)}{0.154} & \\underset{(0.780)}{-0.862} & \\underset{(0.110)}{0.878} & \\underset{(0.091)}{0.143} \\\\\n",
       "\n",
       "T = 2000\n",
-      "\\hat{\\theta}_{\\text{SMM}} & \\underset{(0.223)}{-0.854} & \\underset{(0.027)}{0.896} & \\underset{(0.108)}{0.663} & \\underset{(0.144)}{-0.433} & \\underset{(0.017)}{0.947} & \\underset{(0.084)}{0.470} & \\underset{(0.209)}{-0.796} & \\underset{(0.028)}{0.892} & \\underset{(0.054)}{0.372} \\\\\n",
-      "\\hat{\\theta}_{\\text{SMM}} & \\underset{(0.091)}{-0.193} & \\underset{(0.011)}{0.976} & \\underset{(0.067)}{0.304} & \\underset{(0.144)}{-0.430} & \\underset{(0.019)}{0.942} & \\underset{(0.044)}{0.275} & \\underset{(0.124)}{-0.235} & \\underset{(0.017)}{0.968} & \\underset{(0.047)}{0.201} \\\\\n",
+      "\\hat{\\theta}_{\\text{SMM}} & \\underset{(0.223)}{-0.854} & \\underset{(0.027)}{0.896} & \\underset{(0.108)}{0.663} & \\underset{(0.144)}{-0.433} & \\underset{(0.017)}{0.947} & \\underset{(0.084)}{0.470} & \\underset{(0.091)}{-0.193} & \\underset{(0.011)}{0.976} & \\underset{(0.067)}{0.304} \\\\\n",
+      "\\hat{\\theta}_{\\text{SMM}} & \\underset{(0.209)}{-0.796} & \\underset{(0.028)}{0.892} & \\underset{(0.054)}{0.372} & \\underset{(0.144)}{-0.430} & \\underset{(0.019)}{0.942} & \\underset{(0.044)}{0.275} & \\underset{(0.124)}{-0.235} & \\underset{(0.017)}{0.968} & \\underset{(0.047)}{0.201} \\\\\n",
       "\\hat{\\theta}_{\\text{SMM}} & \\underset{(0.410)}{-1.072} & \\underset{(0.058)}{0.848} & \\underset{(0.051)}{0.172} & \\underset{(0.612)}{-0.921} & \\underset{(0.087)}{0.870} & \\underset{(0.073)}{0.162} & \\underset{(0.707)}{-0.801} & \\underset{(0.100)}{0.887} & \\underset{(0.094)}{0.151} \\\\\n",
       "\n",
       "T = 4000\n",
-      "\\hat{\\theta}_{\\text{SMM}} & \\underset{(0.172)}{-0.838} & \\underset{(0.021)}{0.898} & \\underset{(0.084)}{0.664} & \\underset{(0.108)}{-0.419} & \\underset{(0.013)}{0.949} & \\underset{(0.069)}{0.472} & \\underset{(0.149)}{-0.784} & \\underset{(0.020)}{0.893} & \\underset{(0.038)}{0.370} \\\\\n",
-      "\\hat{\\theta}_{\\text{SMM}} & \\underset{(0.067)}{-0.181} & \\underset{(0.008)}{0.978} & \\underset{(0.054)}{0.306} & \\underset{(0.100)}{-0.416} & \\underset{(0.014)}{0.943} & \\underset{(0.032)}{0.273} & \\underset{(0.090)}{-0.217} & \\underset{(0.012)}{0.971} & \\underset{(0.038)}{0.198} \\\\\n",
+      "\\hat{\\theta}_{\\text{SMM}} & \\underset{(0.172)}{-0.838} & \\underset{(0.021)}{0.898} & \\underset{(0.084)}{0.664} & \\underset{(0.108)}{-0.419} & \\underset{(0.013)}{0.949} & \\underset{(0.069)}{0.472} & \\underset{(0.067)}{-0.181} & \\underset{(0.008)}{0.978} & \\underset{(0.054)}{0.306} \\\\\n",
+      "\\hat{\\theta}_{\\text{SMM}} & \\underset{(0.149)}{-0.784} & \\underset{(0.020)}{0.893} & \\underset{(0.038)}{0.370} & \\underset{(0.100)}{-0.416} & \\underset{(0.014)}{0.943} & \\underset{(0.032)}{0.273} & \\underset{(0.090)}{-0.217} & \\underset{(0.012)}{0.971} & \\underset{(0.038)}{0.198} \\\\\n",
       "\\hat{\\theta}_{\\text{SMM}} & \\underset{(0.394)}{-1.082} & \\underset{(0.056)}{0.847} & \\underset{(0.043)}{0.171} & \\underset{(0.585)}{-0.915} & \\underset{(0.083)}{0.870} & \\underset{(0.069)}{0.162} & \\underset{(0.645)}{-0.757} & \\underset{(0.091)}{0.893} & \\underset{(0.090)}{0.150} \\\\\n",
       "\n"
      ]
@@ -452,6 +454,13 @@
     "smm = pd.concat([pd.read_csv(path) for path in paths])\n",
     "print_latex_rows_for_all_lengths(smm, \"\\\\hat{\\\\theta}_{\\\\text{SMM}}\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
